midpoint-live-demo/base/kubernetes-objects/keycloak/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: keycloak-server
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: server

spec:
  replicas: 1
  serviceName: keycloak-server
  podManagementPolicy: Parallel

  updateStrategy:
    type: RollingUpdate

  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak
      app.kubernetes.io/component: server

  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak
        app.kubernetes.io/component: server

    spec:
      enableServiceLinks: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 60

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      containers:
        - name: server
          image: keycloak-server
          args: ["start-dev"]
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
            - name: mgmt
              containerPort: 9990
          readinessProbe:
            httpGet:
              path: /realms/master
              port: http
          volumeMounts:
            - name: extensions
              mountPath: /opt/jboss/keycloak/providers
            - name: startup
              mountPath: /opt/jboss/startup-scripts

      volumes:
        - name: extensions
          emptyDir: {}
        - name: startup
          configMap:
            name: keycloak-startup
            defaultMode: 0755
        - name: init-db
          configMap:
            name: keycloak-script-map
            defaultMode: 0555
        - name: wait-for-it
          configMap:
            name: keycloak-wait-script-map
            defaultMode: 0555
