midpoint-live-demo/base/kubernetes-objects/keycloak/service.yml
apiVersion: v1
kind: Service

metadata:
  name: keycloak-server
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: server

spec:
  selector:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: server

  ports:
    - name: http
      port: 8080
    - name: https
      port: 8443
    - name: mgmt
      port: 9990
